@startuml

top to bottom direction
skinparam defaultFontName monospaced

'=======================================================================================================================
package render_2d {
    class Renderer
    class GeometryBatch
}

'=======================================================================================================================
package render_3d {
    class Renderer
    class GeometryBatch
}

'=======================================================================================================================
package render_scene {
    class Renderable2d
    class Renderable3d

    note left: "RenderableOnBatch2d/3d?"

    abstract class Renderable

    Renderable *-- Renderable2d
    Renderable *-- Renderable3d

    abstract class RenderableBlueprint {
        + {abstract} makeRenderable(TracedGeometryBatchModifier2d&, 3d)
    }

    class RenderScene {
        + ctor(Renderer2d, 3d)
    --
        + add(RenderableBlueprint&) -> Renderable&
    }

    RenderableBlueprint --> Renderable : factory for

    RenderScene *-- Renderable : container of
}

'=======================================================================================================================
render_scene.RenderScene *-up- render_2d.GeometryBatch
render_scene.RenderScene *-up- render_3d.GeometryBatch

'=======================================================================================================================
class SomeLogicObjectWhichShouldBeRendered implements render_scene.RenderableBlueprint

'=======================================================================================================================
@enduml
